[project]
name = "layer3-knowledge"
version = "0.1.0"
description = "Knowledge Graph & Semantic Layer for Value Fabric Platform"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "Proprietary"}

authors = [
    {name = "Value Fabric Team"}
]

dependencies = [
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "neo4j>=5.15",
    "pinecone-client>=3.0",
    "rdflib>=7.0",
    "sentence-transformers>=2.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.1",
    "python-multipart>=0.0.6",
    "httpx>=0.26",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "networkx>=3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "testcontainers[neo4j]>=4.8",
    "sentence-transformers>=2.3",
    "black>=24.0",
    "ruff>=0.2",
    "mypy>=1.8",
    "types-neo4j>=5.15",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
