[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "layer4-agents"
version = "0.2.0"
description = "Layer 4: Agentic Workflow Engine for Value Fabric with Multi-Agent Orchestration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sse-starlette>=2.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "asyncpg>=0.30.0",
    "openai>=1.54.0",
    "redis>=5.2.0",
    "neo4j>=5.26.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.17",
    "structlog>=24.4.0",
    "prometheus-client>=0.21.0",
    "weasyprint>=62.0",
    "python-docx>=1.1.0",
    "pandas>=2.2.0",
    "numpy>=2.1.0",
    # Provenance & RDF
    "rdflib>=7.0.0",
    "prov>=2.0.0",
    # JWT for tenant middleware
    "PyJWT>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "black>=24.10.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "testcontainers>=4.8.0",
    "respx>=0.21.0",
    "factory-boy>=3.3.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = [".", "src"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
fail_under = 80
