[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "layer4-agents"
version = "0.2.0"
description = "Layer 4: Agentic Workflow Engine for Value Fabric with Multi-Agent Orchestration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sse-starlette>=2.0.0",
    "cryptography>=43.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "asyncpg>=0.30.0",
    "openai>=1.54.0",
    "redis>=5.2.0",
    "neo4j>=5.26.0",
    "httpx>=0.27.0",
    "tenacity>=9.0.0",
    "python-multipart>=0.0.17",
    "structlog>=24.4.0",
    "prometheus-client>=0.21.0",
    "weasyprint>=62.0",
    "python-docx>=1.1.0",
    "pandas>=2.2.0",
    "numpy>=2.1.0",
    # Provenance & RDF
    "rdflib>=7.0.0",
    "prov>=2.0.0",
    # JWT for tenant middleware and OIDC
    "PyJWT>=2.8.0",
    "python-jose[cryptography]>=3.3.0",
    "authlib>=1.3,<2.0",
    # Shared identity module dependencies
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    # Observability
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-instrumentation>=0.41b0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    # Template & HTTP
    "jinja2>=3.1",
    "aiohttp>=3.9",
    # System metrics for health check
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.6.0",
    "pytest-timeout>=2.3.0",
    "pytest-randomly>=3.16.0",
    "black>=24.10.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "testcontainers>=4.8.0",
    "respx>=0.21.0",
    "factory-boy>=3.3.0",
    "faker>=33.0.0",
    "schemathesis>=3.38.0",
    "hypothesis>=6.122.0",
    "httpx>=0.27.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "E402",   # Module level import not at top of file
    "E722",   # Do not use bare `except`
    "W291",   # Trailing whitespace
    "W293",   # Blank line contains whitespace
    "B007",   # Loop control variable not used in loop body
    "B008",   # Do not perform function call in default arguments (FastAPI Depends pattern)
    "B015",   # Pointless comparison
    "B027",   # Empty method in abstract base class
    "B904",   # Within an `except` clause, raise exceptions with `raise ... from err`
    "B905",   # `zip()` without an explicit `strict=` parameter
    "N805",   # First argument of a method should be named `self`
    "N811",   # Constant imported as non-constant
    "N818",   # Exception name should end with `Error`
    "UP042",  # Use `StrEnum` instead of `(str, enum.Enum)` – pre-existing pattern
    "UP007",  # Use `X | Y` for union types
    "SIM101", # Multiple `isinstance()` calls, merge into a single call
    "SIM102", # Use a single `if` statement instead of nested `if` statements
    "SIM103", # Return the condition directly
    "SIM105", # Use `contextlib.suppress(...)` instead of `try`-`except`-`pass`
    "SIM108", # Use ternary operator instead of `if`-`else`-block
    "SIM117", # Use a single `with` statement with multiple contexts
    "SIM118", # Use `key in dict` instead of `key in dict.keys()`
    "UP031",  # Use format specifiers instead of percent format
    "C401",   # Unnecessary generator (use a set comprehension)
    "C405",   # Unnecessary `set` literal
    "C414",   # Unnecessary `list` or `tuple` call within `list()`
    "C416",   # Unnecessary `list` comprehension
]

[tool.mypy]
python_version = "3.11"
plugins = ["sqlalchemy.ext.mypy.plugin"]
# Type safety ratchet - prevents regression (Gap 4)
# Baseline established: 2026-04-19
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Gradual ratchet - set to true when ready
ignore_missing_imports = true
# Error report for CI
show_error_codes = true
show_column_numbers = true
# Performance
cache_dir = ".mypy_cache"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
markers = [
    "unit: Fast unit tests with no external dependencies",
    "integration: Integration tests with real services (DB, cache)",
    "e2e: End-to-end tests with full container orchestration",
    "slow: Tests that take >5 seconds",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
fail_under = 80
